--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="center">
         
         <img src="imag/vecteezy_abstract-background-design-background-texture-design-with_18752867-1.jpg" width="=350" height="270">
-        <h4>تصميم الطالب محمد محمود المخلف</h4>
+        <h4>تطوير الطالب محمد محمود المخلف</h4>
     </div>
 
     <h2 class="calculator">حاسبة الدرجات</h2>
